# ViT-MNIST

./: .gitignore  README.md  pyproject.toml  vit.ipynb  vit_from_scratch.ipynb
data/: submission.csv
